# AI-lead-scoring

./: .gitignore  README.md  app.py  pyproject.toml
src/ai_lead_scoring/: app.py  config.py  pipeline.py  utils.py
src/ai_lead_scoring.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
