[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-lead-scoring"
version = "0.1.0"
description = "AI-powered social media lead scoring tool using Streamlit and OpenAI"
authors = [
    {name = "User"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "openai>=1.0.0"
]

[project.scripts]
run-app = "ai_lead_scoring.app:main"
